k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-service
  labels:
    component: flask-backend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: lotto-prediction
    component: flask-backend
